; ModuleID = '/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_6502.c__6502_anal_esil_flags.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_6502.c__6502_anal_esil_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [8 x i8] c"%d,%c,=\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, i32)* @_6502_anal_esil_flags to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_6502_anal_esil_flags(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8, align 1
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  store i8 117, i8* %6, align 1
  %7 = load i32, i32* %4, align 4
  switch i32 %7, label %15 [
    i32 120, label %8
    i32 88, label %9
    i32 56, label %10
    i32 24, label %11
    i32 248, label %12
    i32 216, label %13
    i32 184, label %14
  ]

8:                                                ; preds = %2
  store i32 1, i32* %5, align 4
  store i8 73, i8* %6, align 1
  br label %15

9:                                                ; preds = %2
  store i32 0, i32* %5, align 4
  store i8 73, i8* %6, align 1
  br label %15

10:                                               ; preds = %2
  store i32 1, i32* %5, align 4
  store i8 67, i8* %6, align 1
  br label %15

11:                                               ; preds = %2
  store i32 0, i32* %5, align 4
  store i8 67, i8* %6, align 1
  br label %15

12:                                               ; preds = %2
  store i32 1, i32* %5, align 4
  store i8 68, i8* %6, align 1
  br label %15

13:                                               ; preds = %2
  store i32 0, i32* %5, align 4
  store i8 68, i8* %6, align 1
  br label %15

14:                                               ; preds = %2
  store i32 0, i32* %5, align 4
  store i8 86, i8* %6, align 1
  br label %15

15:                                               ; preds = %2, %14, %13, %12, %11, %10, %9, %8
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32, i32* %5, align 4
  %19 = load i8, i8* %6, align 1
  %20 = call i32 @r_strbuf_setf(i32* %17, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 %18, i8 signext %19)
  ret void
}

declare dso_local i32 @r_strbuf_setf(i32*, i8*, i32, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
